--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/MainFragment">
+    app:startDestination="@id/converterFragment">
 
     <fragment
-        android:id="@+id/MainFragment"
-        android:name="com.transfergo.currencyconverter.feature.converter.MainFragment"
+        android:id="@+id/converterFragment"
+        android:name="com.transfergo.currencyconverter.feature.converter.ConverterFragment"
         android:label="@string/main_fragment_label"
-        tools:layout="@layout/fragment_main">
+        tools:layout="@layout/fragment_converter">
 
     </fragment>
 </navigation>
