--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,10 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    
+    <dimen name="standard_50">8dp</dimen>
+    <dimen name="standard_100">16dp</dimen>
+    <dimen name="standard_200">32dp</dimen>
+
+    
+    <dimen name="text_size_normal">10sp</dimen>
 </resources>
